syntax = "proto3";

package warehouse;

// Notification service for sending alerts and messages
service NotificationService {
    rpc SendNotification (NotificationRequest) returns (NotificationResponse);
    rpc SubscribeNotifications (stream NotificationSubscriptionRequest) returns (stream NotificationMessage);
}

message NotificationRequest {
    string message = 1;
}

message NotificationResponse {
    bool success = 1;
}

message NotificationSubscriptionRequest {
    string subscriber_id = 1;
}

message NotificationMessage {
    string message = 1;
    string timestamp = 2;
}

